// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of an inny type Switch 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-switch"
    height="20px"
  >
    <styled.div
      className="ui-switch-slider ui-slider-on"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      initialToggle={true}
      innyScale={0.6}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      outyScale={1.25}
      selected={false}
      sizing="normal"
      sliderScale={1.25}
      style={
        Object {
          "backgroundColor": "#5cb85c",
        }
      }
      switchType={0}
      testing={true}
      theme={Object {}}
      tooltip=""
      visible={true}
      width=""
      xcss={null}
    >
      <styled.div
        className="ui-switch-button ripple"
        height="9.6px"
        onClick={[Function]}
        style={
          Object {
            "left": "5%",
          }
        }
        width="9.6px"
      />
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test creation of an outy type Switch 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-switch"
    height="20px"
  >
    <styled.div
      className="ui-switch-slider ui-slider-on"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      initialToggle={true}
      innyScale={0.6}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      outyScale={1.25}
      selected={false}
      sizing="normal"
      sliderScale={1.25}
      style={
        Object {
          "backgroundColor": "#5cb85c",
        }
      }
      switchType={1}
      testing={true}
      theme={Object {}}
      tooltip=""
      visible={true}
      width=""
      xcss={null}
    >
      <styled.div
        className="ui-switch-button ripple"
        height="20px"
        onClick={[Function]}
        style={
          Object {
            "left": "-15%",
          }
        }
        width="20px"
      />
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test disabling of the Switch control 1`] = `
<Switch
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  id=""
  initialToggle={false}
  innyScale={0.6}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  outyScale={1.25}
  selected={false}
  sizing="normal"
  sliderScale={1.25}
  style={Object {}}
  switchType={1}
  testing={true}
  theme={Object {}}
  tooltip=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-switch"
      height="20px"
    >
      <div
        className="ui-switch sc-htpNat byUckz"
        height="20px"
      >
        <styled.div
          className="ui-switch-slider ui-slider-off"
          contentEditable={false}
          direction="right"
          disabled={true}
          focus={false}
          height=""
          id=""
          initialToggle={false}
          innyScale={0.6}
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          onClick={[Function]}
          outyScale={1.25}
          selected={false}
          sizing="normal"
          sliderScale={1.25}
          style={
            Object {
              "backgroundColor": "#d9534f",
            }
          }
          switchType={1}
          testing={true}
          theme={Object {}}
          tooltip=""
          visible={true}
          width=""
          xcss={null}
        >
          <div
            className="ui-switch-slider ui-slider-off sc-bwzfXH lkYTZw"
            contentEditable={false}
            direction="right"
            disabled={true}
            height=""
            id=""
            onClick={[Function]}
            selected={false}
            style={
              Object {
                "backgroundColor": "#d9534f",
              }
            }
            width=""
          >
            <styled.div
              className="ui-switch-button"
              height="20px"
              onClick={[Function]}
              style={
                Object {
                  "left": "45%",
                }
              }
              width="20px"
            >
              <div
                className="ui-switch-button sc-bdVaJa imgpYe"
                height="20px"
                onClick={[Function]}
                style={
                  Object {
                    "left": "45%",
                  }
                }
                width="20px"
              />
            </styled.div>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</Switch>
`;

exports[`Test making the Switch control invisible 1`] = `
<Switch
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  initialToggle={false}
  innyScale={0.6}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  outyScale={1.25}
  selected={false}
  sizing="normal"
  sliderScale={1.25}
  style={Object {}}
  switchType={1}
  testing={true}
  theme={Object {}}
  tooltip=""
  visible={false}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-switch"
      height="20px"
    >
      <div
        className="ui-switch sc-htpNat byUckz"
        height="20px"
      >
        <styled.div
          className="ui-switch-slider ui-slider-off"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          id=""
          initialToggle={false}
          innyScale={0.6}
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          onClick={[Function]}
          outyScale={1.25}
          selected={false}
          sizing="normal"
          sliderScale={1.25}
          style={
            Object {
              "backgroundColor": "#d9534f",
            }
          }
          switchType={1}
          testing={true}
          theme={Object {}}
          tooltip=""
          visible={false}
          width=""
          xcss={null}
        >
          <div
            className="ui-switch-slider ui-slider-off sc-bwzfXH gkllVH"
            contentEditable={false}
            direction="right"
            disabled={false}
            height=""
            id=""
            onClick={[Function]}
            selected={false}
            style={
              Object {
                "backgroundColor": "#d9534f",
              }
            }
            width=""
          >
            <styled.div
              className="ui-switch-button ripple"
              height="20px"
              onClick={[Function]}
              style={
                Object {
                  "left": "45%",
                }
              }
              width="20px"
            >
              <div
                className="ui-switch-button ripple sc-bdVaJa imgpYe"
                height="20px"
                onClick={[Function]}
                style={
                  Object {
                    "left": "45%",
                  }
                }
                width="20px"
              />
            </styled.div>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</Switch>
`;

exports[`Test retrieval of the Switch props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "initialToggle": false,
  "innyScale": 0.6,
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "outyScale": 1.25,
  "selected": false,
  "sizing": "normal",
  "sliderScale": 1.25,
  "style": Object {},
  "switchType": 1,
  "testing": true,
  "theme": Object {},
  "tooltip": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;

exports[`Test the click handler on the Switch control 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-switch"
    height="20px"
  >
    <styled.div
      className="ui-switch-slider ui-slider-off"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      initialToggle={false}
      innyScale={0.6}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      outyScale={1.25}
      selected={false}
      sizing="normal"
      sliderScale={1.25}
      style={
        Object {
          "backgroundColor": "#d9534f",
        }
      }
      switchType={1}
      testing={true}
      theme={Object {}}
      tooltip=""
      visible={true}
      width=""
      xcss={null}
    >
      <styled.div
        className="ui-switch-button ripple"
        height="20px"
        onClick={[Function]}
        style={
          Object {
            "left": "45%",
          }
        }
        width="20px"
      />
    </styled.div>
  </styled.div>
</ThemeProvider>
`;
